--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,20 +1,24 @@
 {
   "dependencies": {
+    "com.meta.xr.sdk.all": "64.0.0",
+    "com.meta.xr.sdk.core": "64.0.0",
+    "com.meta.xr.sdk.platform": "63.0.0",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "4.4.2",
-    "com.unity.analytics": "3.6.12",
+    "com.unity.ai.navigation": "1.1.4",
+    "com.unity.analytics": "3.8.1",
     "com.unity.collab-proxy": "2.0.7",
     "com.unity.ide.rider": "3.0.26",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.6.5",
+    "com.unity.timeline": "1.7.5",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.management": "4.3.3",
-    "com.unity.xr.oculus": "3.3.0",
+    "com.unity.xr.oculus": "4.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -45,8 +49,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "com.meta.xr.sdk.core": "63.0.0",
-    "com.meta.xr.sdk.platform": "63.0.0"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
